Work on second database integration